[master] - Implementa serviço de usuários: dados do repo IndTexBr.

--- a/.env.sample
+++ b/.env.sample
@@ -1,27 +1,19 @@
 # ----------------------------------------------
-# ------------[Arquivos de ambiente]------------
+# ----------[symfony/framework-bundle]----------
 # ----------------------------------------------
 
-.env
-.env.test
+APP_ENV=
+APP_SECRET=
 
 # ----------------------------------------------
-# ------------[Cache e dependências]------------
+# ---------[Conexão com banco de dados]---------
 # ----------------------------------------------
 
-/var/
-/vendor/
-
-# ----------------------------------------------
-# -----------[symfony/phpunit-bridge]-----------
-# ----------------------------------------------
-
-.phpunit
-.phpunit.result.cache
-/phpunit.xml
+DATABASE_URL=postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8
 
 # ----------------------------------------------
 # -------[lexik/jwt-authentication-bundle]------
 # ----------------------------------------------
 
-/config/jwt/*.pem
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PASSPHRASE=
