--- a/.env.sample
+++ b/.env.sample
@@ -17,3 +17,11 @@ DATABASE_URL=postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersi
 
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PASSPHRASE=
+
+# ----------------------------------------------
+# ----------[Acesso ao banco de dados]----------
+# ----------------------------------------------
+
+USERS_POSTGRES_DB=
+USERS_POSTGRES_USER=
+USERS_POSTGRES_PASSWORD=
