--- a/.env.sample
+++ b/.env.sample
@@ -25,3 +25,9 @@ JWT_PASSPHRASE=
 USERS_POSTGRES_DB=
 USERS_POSTGRES_USER=
 USERS_POSTGRES_PASSWORD=
+
+# ----------------------------------------------
+# -------------[nelmio/cors-bundle]-------------
+# ----------------------------------------------
+
+CORS_ALLOW_ORIGIN=
