--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "lexik/jwt-authentication-bundle": "^2.10",
+        "nelmio/cors-bundle": "^2.1",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/console": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/validator": "5.2.*",
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
