--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "sigoms/users",
+    "description": "Users microservice",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
