[master] - Ajustes nas configurações de ambiente.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 /var/
 /vendor/
+/migrations/
 
 # ----------------------------------------------
 # -----------[symfony/phpunit-bridge]-----------
