--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -15,15 +15,15 @@ steps:
       - "build"
       - "-t"
       - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
+      - --build-arg
+      - "APP_ENV=${_APP_ENV} 
+        APP_SECRET=${_APP_SECRET} 
+        DATABASE_URL=${_DATABASE_URL} 
+        JWT_SECRET_KEY=${_JWT_SECRET_KEY} 
+        JWT_PUBLIC_KEY=${_JWT_PUBLIC_KEY} 
+        JWT_PASSPHRASE=${_JWT_PASSPHRASE} 
+        CORS_ALLOW_ORIGIN=${_CORS_ALLOW_ORIGIN}"
       - "."
-    env:
-      - 'APP_ENV=${_APP_ENV}'
-      - 'APP_SECRET=${_APP_SECRET}'
-      - 'DATABASE_URL=${_DATABASE_URL}'
-      - 'JWT_SECRET_KEY=${_JWT_SECRET_KEY}'
-      - 'JWT_PUBLIC_KEY=${_JWT_PUBLIC_KEY}'
-      - 'JWT_PASSPHRASE=${_JWT_PASSPHRASE}'
-      - 'CORS_ALLOW_ORIGIN=${_CORS_ALLOW_ORIGIN}'
 
   - name: "gcr.io/cloud-builders/docker"
     id: "Push"
