--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -15,14 +15,21 @@ steps:
       - "build"
       - "-t"
       - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
-      - "--build-arg APP_ENV='${_APP_ENV}' "
-      - "--build-arg APP_SECRET='${_APP_SECRET}' "
-      - "--build-arg DATABASE_URL='${_DATABASE_URL}' "
-      - "--build-arg JWT_SECRET_KEY='${_JWT_SECRET_KEY}' "
-      - "--build-arg JWT_PUBLIC_KEY='${_JWT_PUBLIC_KEY}' "
-      - "--build-arg JWT_PASSPHRASE='${_JWT_PASSPHRASE}' "
-      - "--build-arg CORS_ALLOW_ORIGIN='${_CORS_ALLOW_ORIGIN}'"
-      - "--no-cache ."
+      - "--build-arg"
+      - "APP_ENV='${_APP_ENV}'"
+      - "--build-arg"
+      - "APP_SECRET='${_APP_SECRET}'"
+      - "--build-arg"
+      - "DATABASE_URL='${_DATABASE_URL}'"
+      - "--build-arg"
+      - "JWT_SECRET_KEY='${_JWT_SECRET_KEY}'"
+      - "--build-arg"
+      - "JWT_PUBLIC_KEY='${_JWT_PUBLIC_KEY}'"
+      - "--build-arg"
+      - "JWT_PASSPHRASE='${_JWT_PASSPHRASE}'"
+      - "--build-arg"
+      - "CORS_ALLOW_ORIGIN='${_CORS_ALLOW_ORIGIN}'"
+      - "."
 
   - name: "gcr.io/cloud-builders/docker"
     id: "Push"
