[master] - Normalização do script de build.

--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -16,19 +16,19 @@ steps:
       - "-t"
       - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
       - "--build-arg"
-      - "APP_ENV='${_APP_ENV}'"
+      - "APP_ENV=${_APP_ENV}"
       - "--build-arg"
-      - "APP_SECRET='${_APP_SECRET}'"
+      - "APP_SECRET=${_APP_SECRET}"
       - "--build-arg"
-      - "DATABASE_URL='${_DATABASE_URL}'"
+      - "DATABASE_URL=${_DATABASE_URL}"
       - "--build-arg"
-      - "JWT_SECRET_KEY='${_JWT_SECRET_KEY}'"
+      - "JWT_SECRET_KEY=${_JWT_SECRET_KEY}"
       - "--build-arg"
-      - "JWT_PUBLIC_KEY='${_JWT_PUBLIC_KEY}'"
+      - "JWT_PUBLIC_KEY=${_JWT_PUBLIC_KEY}"
       - "--build-arg"
-      - "JWT_PASSPHRASE='${_JWT_PASSPHRASE}'"
+      - "JWT_PASSPHRASE=${_JWT_PASSPHRASE}"
       - "--build-arg"
-      - "CORS_ALLOW_ORIGIN='${_CORS_ALLOW_ORIGIN}'"
+      - "CORS_ALLOW_ORIGIN=${_CORS_ALLOW_ORIGIN}"
       - "."
 
   - name: "gcr.io/cloud-builders/docker"
