[master] - Ajustes no build.

--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -42,13 +42,13 @@ steps:
     args:
       - "run"
       - "deploy"
-      - "sigoms-users"
+      - "sigoms-users-puc"
       - "--image"
       - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
       - "--platform"
       - "gke"
       - "--cluster"
-      - "cluster-puc"
+      - "my-first-cluster-1"
       - "--cluster-location"
       - "us-east1-b"
       - "--port"
