--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -13,8 +13,10 @@ steps:
     id: "Build"
     args:
       - "build"
-      - "-t"
-      - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
+      - '-t', 
+      - 'gcr.io/$PROJECT_ID/sigoms-users:$TAG_NAME',
+      - '-t', 
+      - 'gcr.io/$PROJECT_ID/sigoms-users:latest',
       - "--build-arg"
       - "APP_ENV=${_APP_ENV}"
       - "--build-arg"
@@ -31,29 +33,24 @@ steps:
       - "CORS_ALLOW_ORIGIN=${_CORS_ALLOW_ORIGIN}"
       - "."
 
-  - name: "gcr.io/cloud-builders/docker"
-    id: "Push"
-    args:
-      - "push"
-      - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
+  - name: "gcr.io/cloud-builders/kubectl"
+    args: ["apply", "-f", "kube/"]
+    env:
+      - "CLOUDSDK_COMPUTE_ZONE=us-east1-b"
+      - "CLOUDSDK_CONTAINER_CLUSTER=cluster-puc"
 
-  - name: "gcr.io/cloud-builders/gcloud"
-    id: "Deploy"
-    args:
-      - "run"
-      - "deploy"
-      - "sigoms-users-puc"
-      - "--image"
-      - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
-      - "--platform"
-      - "gke"
-      - "--cluster"
-      - "my-first-cluster-1"
-      - "--cluster-location"
-      - "us-east1-b"
-      - "--port"
-      - "80"
-      - "--namespace"
-      - "sigoms-users-puc"
-      - "--min-instances"
-      - "1"
+  - name: 'gcr.io/cloud-builders/kubectl'
+    args: [
+      'set', 
+      'image', 
+      'deployment', 
+      'sigoms-users', 
+      'sigoms-users=gcr.io/$PROJECT_ID/sigoms-users:$TAG_NAME'
+    ]
+    env:
+      - 'CLOUDSDK_COMPUTE_ZONE=us-east1-b'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-puc'
+    images: [
+      'gcr.io/$PROJECT_ID/sigoms-users:$TAG_NAME',
+      'gcr.io/$PROJECT_ID/sigoms-users:latest'
+    ]
