--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -13,8 +13,8 @@ steps:
     id: "Build"
     args:
       - "build"
-      - '-t', 
-      - 'gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA',
+      - "-t"
+      - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
       - "--build-arg"
       - "APP_ENV=${_APP_ENV}"
       - "--build-arg"
@@ -54,7 +54,4 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-east1-b'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-puc'
-    images: [
-      'gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA',
-      'gcr.io/$PROJECT_ID/sigoms-users:latest'
-    ]
+
