--- a/cr/cloudbuild.yaml
+++ b/cr/cloudbuild.yaml
@@ -15,6 +15,8 @@ steps:
       - "build"
       - "-t"
       - "gcr.io/$PROJECT_ID/sigoms-users:$SHORT_SHA"
+      - "-t"
+      - "gcr.io/$PROJECT_ID/sigoms-users:latest"
       - "--build-arg"
       - "APP_ENV=${_APP_ENV}"
       - "--build-arg"
