--- a/kube/services.yaml
+++ b/kube/services.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-     app: sigoms-users
+    run: sigoms-users
   ports:
   - port: 80
     targetPort: 80
