--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -23,6 +23,8 @@
 #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
 #    and best practices on handling the access key credentials.
 
+version: 0.2
+
 on:
   release:
     types: [created]
