[master] - Adiciona 'artifacts'.

--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -31,6 +31,13 @@ on:
 
 name: Deploy to Amazon ECS
 
+artifacts:
+  files:
+    - '**/*'
+  base-directory: base_location
+  name: backend-build-artifact
+  discard-path: no
+
 jobs:
   deploy:
     name: Deploy
