--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -34,7 +34,7 @@ name: Deploy to Amazon ECS
 artifacts:
   files:
     - '**/*'
-  base-directory: base_location
+  base-directory: base_dir
   name: backend-build-artifact
   discard-path: no
 
@@ -52,7 +52,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+        aws-region: sa-east-1
 
     - name: Login to Amazon ECR
       id: login-ecr
